--- a/Applications.mw
+++ b/Applications.mw
@@ -1,5 +1,5 @@
 == Overview ==
-Although OpenMoko is designed for smartphones that use a stylus, it would be foolish to expect people to only operate their handsets with stylus. For this reason, some core phone-related applications will be developed with finger (as opposed to stylus navigation) in mind.
+Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be foolish to expect people to only operate their handsets with stylus. For this reason, some core phone-related applications will be developed with finger (as opposed to stylus navigation) in mind.
 
 == General Principles ==
 * All modifications are saved instantenously, there should never be a save command
