/* 1.14 Emergency Calls capabilities */

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -99,9 +99,12 @@ I suppose this has already been implemented in the [[TI Calypso]] GSM firmware, 
 
 Has to be implemented according to Teleservice 12 (see GSM 02.03 [2] and GSM 02.30 [7]). 
 
-{{note| The emergency calls capabilities are described in [{{etsi_path}}/0203_700.pdf GSM 02.03] and [{{etsi_path}}/0230-711.pdf GSM 02.30]}}
+Here's what's important to us:
 
-{{todo| Need to check those requirements!}}
+"When a dual or multi-band terminal supporting GSM 1900 and another band is registered on a GSM 900, GSM 1800 or GSM 1900 network, it shall support the initiation of an emergency call by entry of 112, 911 or 08 unless a data call is requested."
+--[{{etsi_path}}/0230-711.pdf GSM 02.30]}} page 12
+
+{{note| The emergency calls capabilities are described in [{{etsi_path}}/0203_700.pdf GSM 02.03] and [{{etsi_path}}/0230-711.pdf GSM 02.30]}}
 
 === 1.15 Dual Tone Multi Frequency function (DTMF) ===
 We need to be able to initiate [[DTMF]] in accordance with specifications GSM 02.03 [2] and GSM 03.14 [11]. This will put some additional requirements on both the dialler application and the GSM library/daemon infrastructure, since the [[DTMF]] tones are not actually transmitted as tones on the
