/* 1.14 Emergency Calls capabilities */

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -103,7 +103,7 @@ Here's what's important to us:
 
 <blockquote>
 "When a dual or multi-band terminal supporting GSM 1900 and another band is registered on a GSM 900, GSM 1800 or GSM 1900 network, it shall support the initiation of an emergency call by entry of 112, 911 or 08 unless a data call is requested."
---[{{etsi_path}}/0230-711.pdf GSM 02.30]}} page 12
+[{{etsi_path}}/0230-711.pdf GSM 02.30]}} page 12
 </blockquote>
 
 {{note| The emergency calls capabilities are described in [{{etsi_path}}/0203_700.pdf GSM 02.03] and [{{etsi_path}}/0230-711.pdf GSM 02.30]}}
