--- a/PIM_Storage.mw
+++ b/PIM_Storage.mw
@@ -22,6 +22,8 @@ PIM storage describes a means of storing data in an extensible and cross-referen
 * Usually a real database like SQLite might make a lot of sense here.
 * Embedded EDS might be something to look into.
 
+* Libcontactsdb-0.4 might be a good idea for PIM storage, it based on SQLite.
+
 == Interactions ==
 (TBD)
 
