--- a/PIM_Storage.mw
+++ b/PIM_Storage.mw
@@ -21,8 +21,8 @@ PIM storage describes a means of storing data in an extensible and cross-referen
 == Implementation Recommendations ==
 * Usually a real database like SQLite might make a lot of sense here.
 * Embedded EDS might be something to look into.
-
-* Libcontactsdb-0.4 might be a good idea for PIM storage, it based on SQLite.
+(Steven Chen)
+''* Libcontactsdb-0.4 might be a good idea for PIM storage, it based on SQLite.''
 
 == Interactions ==
 (TBD)
