--- a/PIM_Storage.mw
+++ b/PIM_Storage.mw
@@ -22,7 +22,7 @@ PIM storage describes a means of storing data in an extensible and cross-referen
 * Usually a real database like SQLite might make a lot of sense here.
 * Embedded EDS might be something to look into.
 (Steven Chen)
-''* Libcontactsdb-0.4 might be a good idea for PIM storage, it based on SQLite.''
+* ''Libcontactsdb-0.4 might be a good idea for PIM storage, it based on SQLite.''
 
 == Interactions ==
 (TBD)
