--- a/Applications.mw
+++ b/Applications.mw
@@ -33,6 +33,8 @@ scrolling region should be user defined (left or right side)
 ==Stylus-Based Applications ==
 
 === Required ===
+* [[Top Panel]]
+* [[Footer]]
 * [[Contacts]]
 * [[Messages]]
 * [[Application Manager]]
