--- a/Applications.mw
+++ b/Applications.mw
@@ -58,6 +58,9 @@ scrolling region should be user defined (left or right side)
 * [[System Info]]
 
 == Panel Applications ==
+
+Panel Applications are individual executables residing in the [[Top Panel]]. They're usually indicating a status and offer a pop-up menu. We are not yet sure whether there is enough screen real estate for this huge number of panel applications.
+
 * [[GSM Connection Status]]
 * [[GPRS Connection Status]]
 * [[GPS Connection Status]]
