--- a/D-Bus.mw
+++ b/D-Bus.mw
@@ -1,3 +1,3 @@
 dbus is IPC.
 
-See [http://www.freedesktop.org/wiki/Software/dbus|dbus homepage]
+See [http://www.freedesktop.org/wiki/Software/dbus dbus homepage]
