*Empty MediaWiki Message*

--- a/D-Bus.mw
+++ b/D-Bus.mw
@@ -1,3 +1,3 @@
-dbus is IPC.
+D-Bus is a message bus system, a simple way for applications to talk to one another.
 
 See [http://www.freedesktop.org/wiki/Software/dbus dbus homepage]
