*Empty MediaWiki Message*

--- a/D-Bus.mw
+++ b/D-Bus.mw
@@ -1,3 +1,5 @@
 D-Bus is a message bus system, a simple way for applications to talk to one another.
 
+In OpenMoko we will use it for IPC.
+
 See [http://www.freedesktop.org/wiki/Software/dbus dbus homepage]
