--- a/Applications.mw
+++ b/Applications.mw
@@ -39,6 +39,7 @@ scrolling region should be user defined (left or right side)
 * [[Messages]]
 * [[Application Manager]]
 * [[Search]]
+* [[RSS and Atom Reader]]
 * [[Calendar]]
 * [[Media Player (Full)]]
 * [[Sketchbook]]
