/* Getting started with this wiki (GTA01 unrelated) */

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -19,9 +19,8 @@ Please see
 * [[Software]] for GTA01 software-related (developer) documentation
 * [[:Category:ToDo|To-Do List]] for all the articles with things that neeed to get done.
 
-== Getting started with this wiki (GTA01 unrelated) ==
+== Getting started with this wiki ==
 
 * [http://www.mediawiki.org/wiki/Help:Configuration_settings Configuration settings list]
 * [http://meta.wikimedia.org/wiki/Help:Wikitext_reference MediaWiki Wikitext Reference]
 * [http://www.mediawiki.org/wiki/Help:FAQ MediaWiki FAQ]
-* [http://mail.wikipedia.org/mailman/listinfo/mediawiki-announce MediaWiki release mailing list]
