*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -24,3 +24,6 @@ Please see
 * [http://www.mediawiki.org/wiki/Help:Configuration_settings Configuration settings list]
 * [http://meta.wikimedia.org/wiki/Help:Wikitext_reference MediaWiki Wikitext Reference]
 * [http://www.mediawiki.org/wiki/Help:FAQ MediaWiki FAQ]
+
+== Research and Reference Information ==
+* (coming soon)
