/* Research and Reference Information */

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -22,4 +22,4 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 * [http://www.mediawiki.org/wiki/Help:FAQ MediaWiki FAQ]
 
 == Research and Reference Information ==
-* (coming soon)
+* Future
