*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -10,16 +10,16 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 
 == Documentation ==
 
-* [[Documentation]] for end-user related documentation
-* [[Hardware]] for hardware-related (developer) documentation
-* [[Software]] for GTA01 software-related (developer) documentation
-* [[:Category:ToDo|To-Do List]] for all the articles with things that neeed to get done.
+* [[Documentation]] - End-user related documentation
+* [[Hardware]] - Hardware-related (developer) documentation
+* [[Software]] - GTA01 software-related (developer) documentation
+* [[:Category:ToDo|To-Do List]] - All the articles with things that neeed to get done
+
+== Research and Reference Information ==
+* [[Wish List]] - A collection of ideas and ideals we'd like to see implimented someday
 
 == Getting started with this wiki ==
 
 * [http://www.mediawiki.org/wiki/Help:Configuration_settings Configuration settings list]
 * [http://meta.wikimedia.org/wiki/Help:Wikitext_reference MediaWiki Wikitext Reference]
 * [http://www.mediawiki.org/wiki/Help:FAQ MediaWiki FAQ]
-
-== Research and Reference Information ==
-* Future
