*Empty MediaWiki Message*

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -1,4 +1,4 @@
-This article is a place to collect various thoughts about [[OpenMoko]]
+This article is a place to collect various thoughts about [[OpenMoko]].
 
 == Software Related ==
 === Printing Support ===
@@ -23,3 +23,6 @@ Further details:
 * http://groups.osdl.org/apps/group_public/download.php/2205/print-summit-gtk.pdf#search=%22gtk%2B%20printing%20API%22
 * http://www.gnome.org/~alexl/presentations/guadec2006-printing.pdf#search=%22gtk%2B%20printing%20API%22
 * http://www.j5live.com/?p=204
+
+=== Python Bindings ===
+Python bindings seem to be a commonly requested feature.  [[User:Mickey] says, "They are kind of usable on the 770, but it's at the lower end of being bearable. We should keep this in mind -- Gtk+ already comes with Python Bindings, so we "just" would need to wrap libmoko*. I would prefer to leave this to the community do though, since it doesn't make sense to start wrapping the API until we have a stable API -- and I can imagine it will take us a couple of months after going open until we can start with stabilizing the libmoko API."
