--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -25,4 +25,6 @@ Further details:
 * http://www.j5live.com/?p=204
 
 === Python Bindings ===
-Python bindings seem to be a commonly requested feature.  [[User:Mickey] says, "They are kind of usable on the 770, but it's at the lower end of being bearable. We should keep this in mind -- Gtk+ already comes with Python Bindings, so we "just" would need to wrap libmoko*. I would prefer to leave this to the community do though, since it doesn't make sense to start wrapping the API until we have a stable API -- and I can imagine it will take us a couple of months after going open until we can start with stabilizing the libmoko API."
+Python bindings seem to be a commonly requested feature.  
+
+[[User:Mickey]] says, "They are kind of usable on the 770, but it's at the lower end of being bearable. We should keep this in mind -- Gtk+ already comes with Python Bindings, so we "just" would need to wrap libmoko*. I would prefer to leave this to the community do though, since it doesn't make sense to start wrapping the API until we have a stable API -- and I can imagine it will take us a couple of months after going open until we can start with stabilizing the libmoko API."
