--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -15,7 +15,7 @@ Cups contains a bluetooth printing backend, so (in theory) once you have your da
 # GTK+'s printing support
 # Making cups run on a really small system
 
-{{note| GTK+'s printing support seems to be very immature in 2.6 (which we need to use for some time). Gtk+ 2.10 contains much better printing support -- once we can use this, it should be more easy.
+{{note| GTK+'s printing support seems to be very immature in 2.6 (which we need to use for some time). Gtk+ 2.10 contains much better printing support -- once we can use this, it should be more easy.}}
 
 There's always the possibility to render postscript ourselves, but this is not a piece of cake -- in general, printing is much harder than one would imagine.
 
