*Empty MediaWiki Message*

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -1,5 +1,20 @@
 This article is a place to collect various thoughts about [[OpenMoko]].
 
+== Development Related ==
+=== Painless SDK installation & Setup ===
+Our goal should be a completely painless setup for somebody wanted to develop using [[OpenMoko]]
+
+* one command for installation (apt-get install openmoko)
+* one command to start Xnest (openmoko-xephyr?)
+* one command to start an i386 shell (openmoko-386-shell)
+* one command to start an armel shell (openmoko-armel-shell)
+
+No extra configuration required.
+
+== Platform Related ==
+=== Community Images ===
+In the future there could be complete, unofficial "product images" that are created by the community, for example maybe one that incorporates only free software (in the GNU or OSI sense). Or images build with a particular niche market in mind -- a student for example.
+
 == Software Related ==
 === Printing Support ===
 It would be really neat to be able to print over either bluetooth or USB. I could imagine wanted to print:
