/* Research and Reference Information */

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -16,7 +16,7 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 * [[:Category:ToDo|To-Do List]] - All the articles with things that neeed to get done
 
 == Research and Reference Information ==
-* [[Wish List]] - A collection of ideas and ideals we'd like to see implimented someday
+* [[Wish List]] - A collection of ideas and ideals we'd like to see implemented someday
 
 == Getting started with this wiki ==
 
