--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -13,7 +13,7 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 * [[Documentation]] - End-user related documentation
 * [[Hardware]] - Hardware-related (developer) documentation
 * [[Software]] - GTA01 software-related (developer) documentation
-* [[:Category:ToDo|To-Do List]] - All the articles with things that neeed to get done
+* [[:Category:ToDo|To-Do List]] - All the articles with things that need to get done
 
 == Research and Reference Information ==
 * [[Wish List]] - A collection of ideas and ideals we'd like to see implemented someday
