--- a/Applications.mw
+++ b/Applications.mw
@@ -1,6 +1,8 @@
 == Overview ==
 Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be foolish to expect people to only operate their handsets with stylus. For this reason, some core phone-related applications will be developed with finger (as opposed to stylus navigation) in mind.
 
+{{note| Applications listed on this page are listing in order of priority.}}
+
 == General Principles ==
 * All modifications are saved instantenously, there should never be a save command
 * Make sure users can't make interface operation errors, or that the effects are easily reversible, instead of just notifying them us the potential consequences of their actions.
