--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -45,7 +45,7 @@ Python bindings seem to be a commonly requested feature.
 [[User:Mickey]] says, "They are kind of usable on the [http://www.maemo.org Nokia 770], but it's at the lower end of being bearable. We should keep this in mind -- Gtk+ already comes with Python Bindings, so we "just" would need to wrap libmoko*. I would prefer to leave this to the community do though, since it doesn't make sense to start wrapping the API until we have a stable API -- and I can imagine it will take us a couple of months after going open until we can start with stabilizing the libmoko API."
 
 === C++ Bindings ===
-There is a whole skilled C++ community coming from the Qtopia and Opie project. If we would consider basing OpenMoko C++ Bindings on Gtkmm, then we could drag these guys in.
+There is a whole skilled C++ community coming from the [http://qtopia.net Qtopia] and [http://opie.handhelds.org Opie] projects. If we would consider basing OpenMoko C++ Bindings on [http://www.gtkmm.org/ Gtkmm], then we could drag these guys in.
 
 === Qt Integration ===
 The Trolltech folks have a great widget library. I'd like to interface OpenMoko with Qt4, so that we can write Qt4 applications for the phone which don't look alienated.
