--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -98,6 +98,7 @@ Erasing Nand...Writing to Nand... done
 QT2410 # 
 </pre>
 
+Note: When setting multiple commands, e.g. for bootcmd, you need to use '\;' to escape the ';'.
 
 === MMC/SD ===
 
