--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -98,7 +98,11 @@ Erasing Nand...Writing to Nand... done
 QT2410 # 
 </pre>
 
-Note: When setting multiple commands, e.g. for bootcmd, you need to use '\;' to escape the ';'.
+Note: When setting multiple commands, e.g. for bootcmd, you need to escape the ';', for instance
+
+<pre>
+QT2410 # setenv bootcmd=mmcinit\; ext2load mmc 0 0x32000000 uImage\; bootm 0x32000000
+</pre>
 
 === MMC/SD ===
 
