*Empty MediaWiki Message*

--- a/S3c2410_boot_usb.mw
+++ b/S3c2410_boot_usb.mw
@@ -12,5 +12,5 @@ Sources can be found at [http://people.gta01.hmw-consulting.de/laforge/src/s3c24
 s3c2410_boot_usb usage is quite straight forward:
 
 <pre>
-s3c2410_boot_usb <path_to_executable>
+s3c2410_boot_usb <path_to_executable> <load_address>
 </pre>
