*Empty MediaWiki Message*

--- a/PIM_Storage.mw
+++ b/PIM_Storage.mw
@@ -19,13 +19,10 @@ PIM storage describes a means of storing data in an extensible and cross-referen
 (TBD)
 
 == Implementation Recommendations ==
-* Usually a real database like SQLite might make a lot of sense here.
-* Embedded EDS might be something to look into.
-(Steven Chen)
-* ''Libcontactsdb-0.4 might be a good idea for PIM storage, it based on SQLite.''
+* This will be based on [http://projects.o-hand.com/eds Embedded EDS], this way we will can directly use Evolution data, get OpenSync for free, and eventually be able to talk to a Microsoft Exchange Server using the Novell Connector.
 
 == Interactions ==
-(TBD)
+* Embedded EDS needs libglade2, dbus, and libdb.
 
 == Unresolved Issues ==
 (TBD)
