--- a/PIM_Storage.mw
+++ b/PIM_Storage.mw
@@ -22,7 +22,7 @@ PIM storage describes a means of storing data in an extensible and cross-referen
 * This will be based on [http://projects.o-hand.com/eds Embedded EDS], this way we will can directly use Evolution data, get OpenSync for free, and eventually be able to talk to a Microsoft Exchange Server using the Novell Connector.
 
 == Interactions ==
-* Embedded EDS needs libglade2, dbus, and libdb.
+* Embedded EDS needs libglade2, [[dbus]], and libdb.
 
 == Unresolved Issues ==
 (TBD)
