--- a/PIM_Storage.mw
+++ b/PIM_Storage.mw
@@ -25,7 +25,8 @@ PIM storage describes a means of storing data in an extensible and cross-referen
 * Embedded EDS needs libglade2, [[dbus]], and libdb.
 
 == Unresolved Issues ==
-(TBD)
+* Synchronizing w/ Outlook
+* Synchronizing w/ MacOS X
 
 == Questions and Answers ==
 (None)
