--- a/Applications.mw
+++ b/Applications.mw
@@ -11,6 +11,7 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 * Designers should seek an efficient monotonous solution to gain benefits, including ease of learning, simplicity of implementation, minimization of documentation, and lowered maintenance costs.
 * Whenever you find yourself specifying an error message, please stop; then redesign the interface so that the condition that generated the error message doesn't arise.
 * Is the user gets no utility from a process, there is no reason to tell them that it is happening.
+* Innovation usually happens at the bottom. What we need to do is provide consistent ways to develop and deploy appliations.
 
 ==Finger-Based Applications ==
 scrolling region should be user defined (left or right side) 
