--- a/Applications.mw
+++ b/Applications.mw
@@ -13,6 +13,8 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 * Is the user gets no utility from a process, there is no reason to tell them that it is happening.
 * Innovation usually happens at the bottom. What we need to do is provide consistent ways to develop and deploy appliations.
 
+{{note|Innovation usually happens at the bottom. What we need to do is provide consistent ways to develop and deploy appliations.}}
+
 ==Finger-Based Applications ==
 scrolling region should be user defined (left or right side) 
 === Required ===
