--- a/Applications.mw
+++ b/Applications.mw
@@ -1,7 +1,7 @@
 == Overview ==
 Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be foolish to expect people to only operate their handsets with stylus. For this reason, some core phone-related applications will be developed with finger (as opposed to stylus navigation) in mind.
 
-{{note| Applications listed on this page are listing in order of priority.}}
+{{note| Applications listed on this page are listing in order of priority. Applications with an '*' symbol are required for the 2006.11.7 demo. Applications with an '**' symbol are dervived from 3rd party solutions.}}
 
 == General Principles ==
 * All modifications are saved instantenously, there should never be a save command
