/* Finger-Based Applications */

--- a/Applications.mw
+++ b/Applications.mw
@@ -20,9 +20,9 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 ==Finger-Based Applications ==
 scrolling region should be user defined (left or right side) 
 === Required ===
-* [[Dialer]]
-* [[Main Menu]]
-* [[Media Player]]
+* '''[[Dialer]]'''
+* '''[[Main Menu]]'''
+* '''[[Media Player]]'''
 * [[Clocks]]
 * [[GPS Navigation]]
 * [[View Active Applications]]
