/* Stylus-Based Applications */

--- a/Applications.mw
+++ b/Applications.mw
@@ -40,11 +40,11 @@ scrolling region should be user defined (left or right side)
 ==Stylus-Based Applications ==
 
 === Required ===
-* [[Top Panel]]
-* [[Footer]]
-* [[Contacts]]
-* [[Messages]]
-* [[Application Manager]]
+* '''[[Top Panel]]'''
+* '''[[Footer]]'''
+* '''[[Contacts]]'''
+* '''[[Messages]]'''
+* '''[[Application Manager]]'''
 * [[Search]]
 * [[RSS and Atom Reader]]
 * [[Calendar]]
