--- a/Applications.mw
+++ b/Applications.mw
@@ -65,6 +65,7 @@ scrolling region should be user defined (left or right side)
 
 Panel Applications are individual executables residing in the [[Top Panel]]. They're usually indicating a status and offer a pop-up menu. We are not yet sure whether there is enough screen real estate for this huge number of panel applications.
 
+=== Required ===
 * [[GSM Connection Status]]
 * [[GPRS Connection Status]]
 * [[GPS Connection Status]]
@@ -72,7 +73,9 @@ Panel Applications are individual executables residing in the [[Top Panel]]. The
 * [[USB Connection Status]]
 * [[Battery Monitor]]
 * [[Clock]]
-* [[IM Presence]]
-* [[Screen Grabber]]
 * [[Profiles]]
 * [[Search]]
+
+=== For a Rainy Day ===
+* [[IM Presence]]
+* [[Screen Grabber]]
