--- a/Applications.mw
+++ b/Applications.mw
@@ -66,13 +66,13 @@ scrolling region should be user defined (left or right side)
 Panel Applications are individual executables residing in the [[Top Panel]]. They're usually indicating a status and offer a pop-up menu. We are not yet sure whether there is enough screen real estate for this huge number of panel applications.
 
 === Required ===
-* [[GSM Connection Status]]
-* [[GPRS Connection Status]]
-* [[GPS Connection Status]]
+* '''[[GSM Connection Status]]'''
+* '''[[GPRS Connection Status]]'''
+* '''[[GPS Connection Status]]'''
+* '''[[Battery Monitor]]'''
+* '''[[Clock]]'''
 * [[Bluetooth Connection Status]]
 * [[USB Connection Status]]
-* [[Battery Monitor]]
-* [[Clock]]
 * [[Profiles]]
 * [[Search]]
 
