--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -6,7 +6,7 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 
 * [[Development resources]] - Describes the resources (lists, svn, ...)
 * [[Development process]] - Describes the actual process of development
-* [http://people.gta01.hmw-consulting.de/sean/schedule/ Development Schedule] - Describes the developement schedule and current status. A PDF version can be found [http://people.gta01.hmw-consulting.de/sean/files/openmokoschedule.pdf here].
+* [http://people.gta01.hmw-consulting.de/sean/schedule/ Development Schedule] - Describes the developement schedule and current status. A printer-friendly version can be found [http://people.gta01.hmw-consulting.de/sean/files/openmokoschedule.pdf here].
 
 == Documentation ==
 
