/* Finger-Based Applications */

--- a/Applications.mw
+++ b/Applications.mw
@@ -21,7 +21,7 @@ scrolling region should be user defined (left or right side)
 === Required ===
 * '''[[Dialer]]'''
 * '''[[Main Menu]]'''
-* '''[[Media Player]]'''
+* '''[[Music Player]]'''
 * [[Clocks]]
 * [[GPS Navigation]]
 * [[View Active Applications]]
