--- a/Applications.mw
+++ b/Applications.mw
@@ -74,6 +74,7 @@ Panel Applications are individual executables residing in the [[Top Panel]]. The
 * [[USB Connection Status]]
 * [[Profiles]]
 * [[Search]]
+* [[Quick Launcher]]
 
 === For a Rainy Day ===
 * [[IM Presence]]
