--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -4,9 +4,9 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 
 == Development ==
 
-* [[Development resources]] - Describes the resources (lists, svn, ...)
-* [[Development process]] - Describes the actual process of development
-* [http://people.gta01.hmw-consulting.de/sean/schedule/ Development Schedule] - Describes the developement schedule and current status. A printer-friendly version can be found [http://people.gta01.hmw-consulting.de/sean/files/openmokoschedule.pdf here].
+* [[Development Resources]] - Describes the resources (lists, svn, ...)
+* [[Development Process]] - Describes the actual process of development
+* [[Development Schedule]] - Describes the developement schedule and current status.
 
 == Documentation ==
 
