--- a/Applications.mw
+++ b/Applications.mw
@@ -23,7 +23,7 @@ scrolling region should be user defined (left or right side)
 * '''[[Music Player]]'''
 * [[Clocks]]
 * [[GPS Navigation]]
-* [[View Active Applications]]
+* [[History]]
 * [[Screen Saver]]
 * [[Calculator]]
 * [[Unit Converter]]
