/* wget alternative */  Corrected URL and added requirement for username/passwd

--- a/Using_Subversion.mw
+++ b/Using_Subversion.mw
@@ -13,11 +13,11 @@ Use svn, the Subversion command line client:
 Replace /your/path/to/your/working_copy with the actual path to the directory into which you wish to use all the GSM files. Or use a . (period) if you're already in that directory.
 
 ==== wget alternative ====
-If your current computer doesn't have Subversion, you might want to use the repository directly to get the latest files. It's not as efficient and powerful as subversion itself, but it might help.
+If your current computer doesn't have Subversion, you might want to use the repository directly to get the latest files. It's not as efficient and powerful as subversion itself, but it might help.  You will need to put your gta01 username and password on the command line, since the files require authentication.
 
 Use the wget tool to do it, as follow:
 
- wget -r -np -nH --cut-dirs=1 {{svn_trunk}}
+ wget -r -np -nH --cut-dirs=1 --user USER --password PASSWD http://svn.gta01.hmw-consulting.de/trunk
 
 === Mac OSX Setup ===
 Thanks to its Unix underpinnings, Mac OS X offers several ways to connect to a repository, ranging from conventional Cocoa applications to the use of a command line. Though anyone should be able to follow any of the methods listed below, users are encouraged to choose the approach that best suits their personal workflow and level of technical skills--particularly if they're using Subversion to update a live site.
