Reverted wget url to use svn_trunk template

--- a/Using_Subversion.mw
+++ b/Using_Subversion.mw
@@ -17,7 +17,7 @@ If your current computer doesn't have Subversion, you might want to use the repo
 
 Use the wget tool to do it, as follow:
 
- wget -r -np -nH --cut-dirs=1 --user USER --password PASSWD http://svn.gta01.hmw-consulting.de/trunk
+ wget -r -np -nH --cut-dirs=1 --user USER --password PASSWD {{svn_trunk}}
 
 === Mac OSX Setup ===
 Thanks to its Unix underpinnings, Mac OS X offers several ways to connect to a repository, ranging from conventional Cocoa applications to the use of a command line. Though anyone should be able to follow any of the methods listed below, users are encouraged to choose the approach that best suits their personal workflow and level of technical skills--particularly if they're using Subversion to update a live site.
