*Empty MediaWiki Message*

--- a/Applications.mw
+++ b/Applications.mw
@@ -42,7 +42,7 @@ scrolling region should be user defined (left or right side)
 * '''[[Messages]]'''
 * '''[[Application Manager]]'''
 * [[Search]]
-* [[RSS and Atom Reader]]
+* [[Feed Reader]]
 * [[Calendar]]
 * [[Media Player (Full)]]
 * [[Sketchbook]]
