/* Usage of shell mode */

--- a/Gsmd.mw
+++ b/Gsmd.mw
@@ -20,6 +20,8 @@ The shell mode can be started using
 
  libgsmd-tool -m shell
 
+It can be used like in the following example:
+
 <pre>
 > src/util/libgsmd-tool -m shell
 libgsm-tool - (C) 2006 by Harald Welte
