/* Usage of shell mode */

--- a/Gsmd.mw
+++ b/Gsmd.mw
@@ -14,7 +14,7 @@ libgsmd-tool is a small demo applicaiton that can be used to demonstrate the usa
 
 libgsmd-tool has multiple modes.  
 
-=== Usage of shell mode ===
+==== Usage of shell mode ====
 
 The shell mode can be started using
 
