--- a/Gsmd.mw
+++ b/Gsmd.mw
@@ -16,6 +16,8 @@ libgsmd-tool has multiple modes.
 
 ==== Usage of shell mode ====
 
+Shell mode provides a simple text-based command interface for making voice calls.
+
 The shell mode can be started using
 
  libgsmd-tool -m shell
@@ -54,4 +56,27 @@ RSTR=`OK'
 H
 # Hangup
 RSTR=`OK'
+</pre>
+
+==== Usage of atcmd mode ====
+
+The atcmd mode is a passthrough-mode.  Passthrough means that it accepts [[GSM 07.07]] commands, passes them throough the daemon to the phone, and returns you the response.  this is very useful for debugging.
+
+The atcmd mode can be started using
+
+ libgsmd-tool -m atcmd
+
+Usage is like in the following example:
+
+<pre>
+> src/util/libgsmd-tool -m atcmd
+libgsm-tool - (C) 2006 by Harald Welte
+This program is Free Software and has ABSOLUTELY NO WARRANTY
+
+AT+CPAS
+STR=`AT+CPAS'
+RSTR=`+CPAS: 0'
+AT+COPS=?
+STR=`AT+COPS=?'
+RSTR=`+COPS: (2,"E-Plus","E-Plus","26203"),(3,"o2 - de","o2 - de","26207"),(3,"Vodafone.de","Vodafone","26202"),(3,"T-Mobile D","TMO D","26201")'
 </pre>
