--- a/Gsmd.mw
+++ b/Gsmd.mw
@@ -2,6 +2,28 @@
 
 gsmd is the GSM daemon running in background of the GTA01 phone, managing the actual 'phone' part of the phone :)
 
+=== Usage ===
+
+gsmd is usually started as a daemon in background, but can be run in foreground mode for debugging.
+
+The options can be queried like:
+<pre>
+> src/gsmd/gsmd --help
+gsmd - (C) 2006 by Harald Welte <laforge@gnumonks.org>
+This program is FREE SOFTWARE under the terms of GNU GPL
+
+Usage:
+        -v      --version       Display program version
+        -d      --daemon        Deamonize
+        -h      --help          Display this help message
+        -p dev  --device dev    Specify serial device to be used
+        -s spd  --speed spd     Specify speed in bps (9600,38400,115200,...)
+        -l file --logfile file  Specify a logfile to log to
+</pre>
+
+If your GSM modem is attached to ttyUSB3, you can e.g. use:
+ gsmd -p /dev/ttyUSB3 -s 115200
+
 == libgsmd ==
 
 libgsmd is a library with C language API for application programs.  Programs using this library can use the phone, e.g. make phone calls, receive incoming calls, register to the network, etc.
