*Empty MediaWiki Message*

--- a/Gsmd.mw
+++ b/Gsmd.mw
@@ -102,3 +102,23 @@ AT+COPS=?
 STR=`AT+COPS=?'
 RSTR=`+COPS: (2,"E-Plus","E-Plus","26203"),(3,"o2 - de","o2 - de","26207"),(3,"Vodafone.de","Vodafone","26202"),(3,"T-Mobile D","TMO D","26201")'
 </pre>
+
+== Currently missing ==
+
+(please add items to this list if you're missing more features)
+
+* Phone related functions
+** which ones do we need?
+* Network related functions
+** obtain list of available operators
+** select operator out of the list
+** obtain list of operator names
+** query field strength
+* SMS related features
+** send SMS
+** receive SMS
+* SIM related functions
+** read phonebook entry
+** write phonebook entry
+* GPRS related functions
+** set up GPRS link, use it via separate DLC of TS07.10 multiplex
