--- a/Gsmd.mw
+++ b/Gsmd.mw
@@ -122,3 +122,6 @@ RSTR=`+COPS: (2,"E-Plus","E-Plus","26203"),(3,"o2 - de","o2 - de","26207"),(3,"V
 ** write phonebook entry
 * GPRS related functions
 ** set up GPRS link, use it via separate DLC of TS07.10 multiplex
+* gsmd internal infrastructure
+** fine-grained event subscriptions (rather than wildcard-subscribe)
+** possibility to specify log-level from command line
