*Empty MediaWiki Message*

--- a/PCF50606.mw
+++ b/PCF50606.mw
@@ -1,5 +1,10 @@
-== PCF50606 ==
+== Overview ==
+
 The PCF50606 is the Power Management Unit used in GTA01.  Apparently this unit is very popular in MP3 players, as the Rockbox project has talked a lot about writing a driver for it (but hasn't completed any, as far as we know).
+
+Configuration of this PMU is done via an [[I2C]] bus from the [[S3C2410]].
+
+The PMU also connects to 
 
 === Voltage Regulators ===
 
@@ -23,7 +28,7 @@ The PCF50606 is the Power Management Unit used in GTA01.  Apparently this unit i
 |-
 | D3
 | 3.3V
-| [[WM8976]] Audio Codec, [[LM4757]] Anaolog ??
+| [[WM8976]] Audio Codec, 
 |-
 | D2
 | 0.9..3.3V (variable)
