--- a/PCF50606.mw
+++ b/PCF50606.mw
@@ -4,7 +4,7 @@ The PCF50606 is the Power Management Unit used in GTA01.  Apparently this unit i
 
 Configuration of this PMU is done via an [[I2C]] bus from the [[S3C2410]].
 
-The PMU also connects to 
+The PMU also connects to EINT16 and thus can issue interrupts to the main CPU.
 
 === Voltage Regulators ===
 
