/* high-level requirements */

--- a/Kernel.mw
+++ b/Kernel.mw
@@ -57,7 +57,7 @@ The GTA01 audio subsystem is fairly simple, therefore the high-level requirement
 The features we need to support
 
 * voice call support
-** passing through the microphone signal to the GSM Modem (not neccessarry, seems to be connected to GSM and Codec in parallel)
+** passing through the microphone signal to the GSM Modem
 ** passing through the GSM Modem audio output to the integrated speaker(s)
 ** the microphone input mixer gain will be statically configured according to the dynamic requirements
 ** the audio volume that is sent to the GSM modem can be adjusted via line out level
