--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -18,6 +18,10 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 == Research and Reference Information ==
 * [[Wish List]] - A collection of ideas and ideals we'd like to see implemented someday
 
+== Miscellaneous ==
+* [[Press coverage]]
+* [[Free phones]] - A list of FOSS developers to whom we want to give free phones
+
 == Getting started with this wiki ==
 
 * [http://www.mediawiki.org/wiki/Help:Configuration_settings Configuration settings list]
