--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -49,3 +49,6 @@ There is a whole skilled C++ community coming from the [http://qtopia.net Qtopia
 
 === Qt Integration ===
 The Trolltech folks have a great widget library. I'd like to interface OpenMoko with Qt4, so that we can write Qt4 applications for the phone which don't look alienated.
+
+=== Maemo Integration ===
+The Maemo folks have created a successful standard for Webpad applications. I'd like to have a set of MaemoMoko and MokoMaemo wrapper classes that allow me add support for running OpenMoko applications on Maemo and vice versa. Perhaps we can get help from the Nokia OSS folks for that.
