--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -15,7 +15,7 @@ No extra configuration required.
 === Community Images ===
 In the future there could be complete, unofficial "product images" that are created by the community, for example maybe one that incorporates only free software (in the GNU or OSI sense). Or images build with a particular niche market in mind -- a student for example.
 
-== Software Related ==
+== Software Related: Additional Features ==
 === Printing Support ===
 It would be really neat to be able to print over either bluetooth or USB. I could imagine wanted to print:
 
@@ -39,6 +39,7 @@ Further details:
 * http://www.gnome.org/~alexl/presentations/guadec2006-printing.pdf#search=%22gtk%2B%20printing%20API%22
 * http://www.j5live.com/?p=204
 
+== Software Related: Language Bindings ==
 === Python Bindings ===
 Python bindings seem to be a commonly requested feature.  
 
@@ -47,8 +48,13 @@ Python bindings seem to be a commonly requested feature.
 === C++ Bindings ===
 There is a whole skilled C++ community coming from the [http://qtopia.net Qtopia] and [http://opie.handhelds.org Opie] projects. If we would consider basing OpenMoko C++ Bindings on [http://www.gtkmm.org/ Gtkmm], then we could drag these guys in.
 
+== Software Related: Foreign Widget Set Bindings ==
+
 === Qt Integration ===
 The Trolltech folks have a great widget library. I'd like to interface OpenMoko with Qt4, so that we can write Qt4 applications for the phone which don't look alienated.
 
 === Maemo Integration ===
 The Maemo folks have created a successful standard for Webpad applications. I'd like to have a set of MaemoMoko and MokoMaemo wrapper classes that allow me add support for running OpenMoko applications on Maemo and vice versa. Perhaps we can get help from the Nokia OSS folks for that.
+
+=== wxWidgets Integration ===
+wxWidgets is a cross-platform application framework that's very popular (I'd say, #3 after Qt and Gtk+). On Linux, wxWidgets uses Gtk+ to implement the widgets. It shouldn't be hard to add support for the additional OpenMoko classes to wxWidgets hence supporting the native OpenMoko look and feel for wxWidgets applications.
