/* Software Related: Additional Features */

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -16,6 +16,9 @@ No extra configuration required.
 In the future there could be complete, unofficial "product images" that are created by the community, for example maybe one that incorporates only free software (in the GNU or OSI sense). Or images build with a particular niche market in mind -- a student for example.
 
 == Software Related: Additional Features ==
+=== Multiboot Support ===
+I'd like to see U-Boot being enhanced to support a boot menu that allows to boot a complete image from the MMC. This way we have a simple way for part-time developers (aka people actually _using_ their phone or people not having a seperate phone for development) to experiment with new OpenMoko releases or custom images.
+
 === Printing Support ===
 It would be really neat to be able to print over either bluetooth or USB. I could imagine wanted to print:
 
