*Empty MediaWiki Message*

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -11,6 +11,13 @@ Our goal should be a completely painless setup for somebody wanted to develop us
 
 No extra configuration required.
 
+== Community Support Related ==
+
+=== projects.openmoko.org ===
+Infrastructure for developers w/
+* one bugzilla for all projects (makes moving bugs forth and backwards between projects _very_ easy)
+* one mailinglist for project
+
 == Platform Related ==
 === Community Images ===
 In the future there could be complete, unofficial "product images" that are created by the community, for example maybe one that incorporates only free software (in the GNU or OSI sense). Or images build with a particular niche market in mind -- a student for example.
