--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -49,6 +49,10 @@ Further details:
 * http://www.gnome.org/~alexl/presentations/guadec2006-printing.pdf#search=%22gtk%2B%20printing%20API%22
 * http://www.j5live.com/?p=204
 
+=== PalmOS Emulator ===
+
+The Access group is probably coming out with their Linux platform any time soon. One of the components is a PalmOS emulator which I'd like to see working on OpenMoko as well. There are literally millions of PalmOS apps.
+
 == Software Related: Language Bindings ==
 === Python Bindings ===
 Python bindings seem to be a commonly requested feature.  
