*Empty MediaWiki Message*

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -9,7 +9,13 @@ Our goal should be a completely painless setup for somebody wanted to develop us
 * one command to start an i386 shell (openmoko-386-shell)
 * one command to start an armel shell (openmoko-armel-shell)
 
-No extra configuration required.
+No extra configuration required (allowed ;)
+
+=== IDE Plugins ===
+People like to see plugins for
+* Anjuta
+* Eclipse
+* Kdevelop
 
 == Community Support Related ==
 
