*Empty MediaWiki Message*

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -1,4 +1,4 @@
-This article is a place to collect various thoughts about [[OpenMoko]].
+This article is a place to collect various thoughts about the future of the [[OpenMoko]] software platform.
 
 == Development Related ==
 === Painless SDK installation & Setup ===
