*Empty MediaWiki Message*

--- a/Applications.mw
+++ b/Applications.mw
@@ -1,7 +1,7 @@
 == Overview ==
 Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be foolish to expect people to only operate their handsets with stylus. For this reason, some core phone-related applications will be developed with finger (as opposed to stylus navigation) in mind.
 
-{{note| Applications listed on this page are listing in order of priority. Applications in '''bold''' are required for the 2006.11.7 demo in Amsterdam.}}
+{{note| Applications listed on this page are listing in order of priority. Applications in '''bold''' are required for mass production and the first shippment of handsets.}}
 
 
 == General Principles ==
@@ -21,9 +21,9 @@ scrolling region should be user defined (left or right side)
 * '''[[Dialer]]'''
 * '''[[Main Menu]]'''
 * '''[[Music Player]]'''
-* [[Clocks]]
+* '''[[Clocks]]'''
+* '''[[History]]'''
 * [[GPS Navigation]]
-* [[History]]
 * [[Screen Saver]]
 * [[Calculator]]
 * [[Unit Converter]]
@@ -41,14 +41,14 @@ scrolling region should be user defined (left or right side)
 * '''[[Contacts]]'''
 * '''[[Messages]]'''
 * '''[[Application Manager]]'''
-* [[Search]]
-* [[Feed Reader]]
-* [[Calendar]]
+* '''[[Search]]'''
+* '''[[Feed Reader]]'''
+* '''[[Calendar]]'''
+* '''[[Preferences]]'''
+* '''[[Help Viewer]]'''
 * [[Media Player (Full)]]
 * [[Sketchbook]]
 * [[Today]]
-* [[Preferences]]
-* [[Help Viewer]]
 * [[Picture Viewer]]
 * [[File Browser]]
 * [[Terminal]]
@@ -69,11 +69,10 @@ Panel Applications are individual executables residing in the [[Top Panel]]. The
 * '''[[GPS Connection Status]]'''
 * '''[[Battery Monitor]]'''
 * '''[[Clock]]'''
-* [[Bluetooth Connection Status]]
-* [[USB Connection Status]]
-* [[Profiles]]
-* [[Search]]
-* [[Quick Launcher]]
+* '''[[Bluetooth Connection Status]]'''
+* '''[[USB Connection Status]]'''
+* '''[[Profiles]]'''
+* '''[[Search]]'''
 
 === For a Rainy Day ===
 * [[IM Presence]]
