--- a/Applications.mw
+++ b/Applications.mw
@@ -42,13 +42,13 @@ scrolling region should be user defined (left or right side)
 * '''[[Messages]]'''
 * '''[[Application Manager]]'''
 * '''[[Search]]'''
+* '''[[Today]]'''
 * '''[[Feed Reader]]'''
 * '''[[Calendar]]'''
 * '''[[Preferences]]'''
 * '''[[Help Viewer]]'''
 * [[Media Player (Full)]]
 * [[Sketchbook]]
-* [[Today]]
 * [[Picture Viewer]]
 * [[File Browser]]
 * [[Terminal]]
