--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -19,7 +19,7 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 * [[Wish List]] - A collection of ideas and ideals we'd like to see implemented someday
 
 == Miscellaneous ==
-* [[Press coverage]]
+* [[Press coverage]]- A list of related news articles and web content for OpenMoko
 * [[Free phones]] - A list of FOSS developers to whom we want to give free phones
 
 == Getting started with this wiki ==
