--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -7,6 +7,7 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 * [[Development resources]] - Describes the resources (lists, svn, ...)
 * [[Development process]] - Describes the actual process of development
 * [[Development schedule]] - Describes the developement schedule and current status.
+* [[Development allocation]] - Describes who is doing what.
 
 == Documentation ==
 
