/* Stylus-Based Applications */

--- a/Applications.mw
+++ b/Applications.mw
@@ -41,12 +41,12 @@ scrolling region should be user defined (left or right side)
 * '''[[Contacts]]'''
 * '''[[Messages]]'''
 * '''[[Application Manager]]'''
-* '''[[Search]]'''
 * '''[[Today]]'''
 * '''[[Feed Reader]]'''
 * '''[[Calendar]]'''
 * '''[[Preferences]]'''
 * '''[[Help Viewer]]'''
+* [[Search]]
 * [[Media Player (Full)]]
 * [[Sketchbook]]
 * [[Picture Viewer]]
