/* Finger-Based Applications */

--- a/Applications.mw
+++ b/Applications.mw
@@ -21,8 +21,8 @@ scrolling region should be user defined (left or right side)
 * '''[[Dialer]]'''
 * '''[[Main Menu]]'''
 * '''[[Music Player]]'''
-* '''[[Clocks]]'''
 * '''[[History]]'''
+* [[Clocks]]
 * [[GPS Navigation]]
 * [[Screen Saver]]
 * [[Calculator]]
