/* For a Rainy Day */

--- a/Applications.mw
+++ b/Applications.mw
@@ -72,5 +72,6 @@ Panel Applications are individual executables residing in the [[Top Panel]]. The
 * '''[[USB Connection Status]]'''
 
 === For a Rainy Day ===
+* [[Search]]
 * [[IM Presence]]
 * [[Screen Grabber]]
