--- a/Applications.mw
+++ b/Applications.mw
@@ -35,17 +35,19 @@ scrolling region should be user defined (left or right side)
 
 ==Stylus-Based Applications ==
 
-=== Required ===
-* '''[[Top Panel]]'''
-* '''[[Footer]]'''
-* '''[[Contacts]]'''
-* '''[[Messages]]'''
-* '''[[Application Manager]]'''
-* '''[[Today]]'''
-* '''[[Feed Reader]]'''
-* '''[[Calendar]]'''
-* '''[[Preferences]]'''
-* '''[[Help Viewer]]'''
+=== 1st Phase ===
+* [[Top Panel]]
+* [[Footer]]
+* [[Contacts]]
+* [[Messages]]
+* [[Application Manager]]
+* [[Today]]
+* [[Feed Reader]]
+* [[Calendar]]
+* [[Preferences]]
+* [[Help Viewer]]
+
+=== 2nd Phase ===
 * [[Search]]
 * [[Media Player (Full)]]
 * [[Sketchbook]]
