--- a/Applications.mw
+++ b/Applications.mw
@@ -66,12 +66,12 @@ scrolling region should be user defined (left or right side)
 Panel Applications are individual executables residing in the [[Top Panel]]. They're usually indicating a status and offer a pop-up menu. We are not yet sure whether there is enough screen real estate for this huge number of panel applications.
 
 === Required ===
-* '''[[GSM & GPRS Connection Status]]'''
-* '''[[GPS Connection Status]]'''
-* '''[[Battery Monitor]]'''
-* '''[[Clock]]'''
-* '''[[Bluetooth Connection Status]]'''
-* '''[[USB Connection Status]]'''
+* [[GSM & GPRS Connection Status]]
+* [[GPS Connection Status]]
+* [[Battery Monitor]]
+* [[Clock]]
+* [[Bluetooth Connection Status]]
+* [[USB Connection Status]]
 
 === For a Rainy Day ===
 * [[Search]]
